# drink_server_robot

./: CMakeLists.txt  README.md  package.xml
drink_driver_com/: left_open.sh  left_stop.sh  right_open.sh  right_stop.sh
drink_server_control/: CMakeLists.txt  README.md  package.xml
drink_server_control/launch/: drink_robot_start.launch  robot_prepare.launch
drink_server_control/scripts/: dev_file_setup.sh  drink_change.py  hand_controller.py  inverse_kinematics.py  person.py  utils.py
drink_server_hw/: CMakeLists.txt  package.xml
drink_server_hw/config/: controller.yaml
drink_server_hw/include/drink_server_hw/: dynamixel_hw.h
drink_server_hw/launch/: diff_drive_start.launch  diff_drive_test.launch
drink_server_hw/src/: diff_drive.cpp  dynamixel_hw.cpp  hw_test_without_dynamixel.cpp
drink_server_robot/: CMakeLists.txt  CmakeLists.txt  package.xml
drink_server_robot/scripts/: person.py
drink_server_sh/: dxlib.sh  left_push.sh  left_release.sh  right_push.sh  right_release.sh
msg/: ParamManipulator.msg
scripts/: hand_controller.py  person.py  utils.py
